# kodeks

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  README.md  README.zh-CN.md  eslint.config.mjs  kodeks.code-workspace  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: eslint.config.mjs  next.config.ts  (+3 more)
build_backend/: kodeks_build.py
docs/: 2026-05-24-agent-feedback-retrospective.md  MODERNIZATION.md  PRD.md  architecture.md  concepts-map.md  harness-reading-map.md  refactor-parity.md
evals/: README.md  cases.jsonl  live-coding-tasks.json  live_cases.jsonl  run_local.py
frontend/: DEPLOY.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
oracle/: README.md  manifest.json  record.py
scripts/: bridge.ts  build-frontend.sh  dev.py
tasks/: lessons.md  todo.md
tests/: test_agents_runtime.py  test_app.py  test_approval_hardening.py  test_approvals_route.py  test_audit_service.py  test_bridge.py  test_chat_route.py  test_chat_runtime.py  test_config.py  test_deepseek_chat_completions_provider.py  test_events.py  test_harness_boundary_contracts.py  test_migration_contracts.py  test_offload_and_transport.py  test_openai_responses_provider.py  test_openai_service.py  test_packaging.py  test_route_parity.py  test_runtime.py  test_runtime_harness.py  test_server.py  test_session_state.py  test_shell_service.py  test_smoke.py  test_static_serving.py  test_tool_registry.py  test_tools.py  test_workspace_route.py  test_workspace_service.py  test_workspace_storage_sse.py
(+333 files in other folders)
